--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
 
 <style>
 	
+	html,body {
+  	width: 100%;
+ 	 height: 100%;
+  	margin: 0;
+	}
+	
 	a:link {
     color: white;
     background-color: transparent;
