--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <link rel="stylesheet" type="text/css" href="style.css">
 <title>leochras</title>
 <link rel="shortcut icon" href="gradient-small.png" >
-<meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 </head>
 
@@ -39,8 +39,9 @@
 <p></p>
         <a href="https://www.youtube.com/channel/UCL88WsgR7lFKwM_ySHHup3A" target="_blank">YouTube<a/>
 
+</hr>
  </div>
- <hr/>
+
 
 </body>
 </html>
