--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <link rel="stylesheet" type="text/css" href="style.css">
 <title>leochras</title>
 <link rel="shortcut icon" href="gradient-small.png" >
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="viewport" content="width=device-width, initial-scale=0.9">
 
 </head>
 
@@ -16,7 +16,7 @@
 <h1 class="glow">leochras</h1>
 <p>Erbaut damals, am 04.04.2017</p>
 
-<hr>
+<hr class="center">
 
 <h2 class="glow">Diverse Links:</h2>
 	 
