--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <div class="center">
 
 <h1 class="glow">leochras</h1>
-<p>Erbaut damals, am 04.04.2017</p>
+<p>since 04.04.2017</p>
 
 <hr class="center">
 
