--- a/index.html
+++ b/index.html
@@ -1,47 +1,150 @@
 <!DOCTYPE html>
 <html>
-<head>
+  <header>
+      <link rel="stylesheet" type="text/css" href="style.css">
+      <title>Webinterface</title>
+  </header>
 
-<link rel="stylesheet" type="text/css" href="style.css">
-<title>leochras</title>
-<link rel="shortcut icon" href="gradient-small.png" >
-<meta name="viewport" content="width=device-width, initial-scale=0.8">
+  <body>
+	<h1>RD-IO2 Conveyor KNAPP Industry Solutions GMBH</h1>
+  <p>
+	<table>
+      <tr>
+        <th colspan="3">Parameters</th>
+      </tr>
+      <tr>
+        <td>Conveyor Running Speed</td>
+        <td class="center">:="ConveyorInterface".StationSettings.DR_TransferSpeed: %</td>
+        <td>
+          <!-- AWP_In_Variable Name='"ConveyorInterface".StationSettings.DR_TransferSpeed' -->
+          <form method="post">
+            <input name='"ConveyorInterface".StationSettings.DR_TransferSpeed' type="number">
+            <input type="submit" value="Set"></p>
+          </form>
+        </td>
+      </tr>
+      <tr>
+        <td>Conveyor Reposition Speed</td>
+        <td class="center">:="ConveyorInterface".StationSettings.DR_ReposSpeed: %</td>
+        <td>
+          <!-- AWP_In_Variable Name='"ConveyorInterface".StationSettings.DR_ReposSpeed' -->
+          <form method="post">
+            <input name='"ConveyorInterface".StationSettings.DR_ReposSpeed' type="number">
+            <input type="submit" value="Set"></p>
+          </form>
+        </td>
+      </tr>
+      <tr>
+        <td>Shuttle Transfer Timeout</td>
+        <td class="center">:="ConveyorInterface".StationSettings.TransferTimeout: ms</td>
+        <td>
+          <!-- AWP_In_Variable Name='"ConveyorInterface".StationSettings.TransferTimeout' -->
+          <form method="post">
+            <input name='"ConveyorInterface".StationSettings.TransferTimeout' type="number">
+            <input type="submit" value="Set"></p>
+          </form>
+        </td>
+      </tr>
+      <tr>
+        <td>Coupling Mode (0=off)</td>
+        <!-- AWP_In_Variable Name='"ConveyorInterface".CouplingMode' -->
+		    <!-- AWP_Enum_Def Name="CouplingMode" Values='0:"No Coupling", 1:"Coupling A -> B", 2:"Coupling B -> A"' -->
 
-</head>
+        <td class="center">
+		Mode: <!-- AWP_Enum_Ref Name='"ConveyorInterface".CouplingMode' Enum="CouplingMode"--> :="ConveyorInterface".CouplingMode:
+		</td>
+		<td>
+          <form method="post">
+            <select name='"ConveyorInterface".CouplingMode'>
+              <option value="No Coupling">No Coupling</option>
+              <option value="Coupling A -> B">Coupling A -> B</option>
+              <option value="Coupling B -> A">Coupling B -> A</option>
+            </select>
+            <input type="submit" value="Set">
+          </form>
+        </td>
+      </tr>
+      <tr>
+        <td>Status Delay Time</td>
+        <td class="center">:="ConveyorInterface".StatusDelayTime: ms</td>
+        <td>
+            <!-- AWP_In_Variable Name='"ConveyorInterface".StatusDelayTime' -->
+          <form method="post">
+            <input name='"ConveyorInterface".StatusDelayTime' type="number">
+            <input type="submit" value="Set"></p>
+          </form>
+        </td>
+      </tr>
+    </table>
 
-<body>
+      <p>
 
-<div class="center">
+    <table>
+      <!-- AWP_Enum_Def Name="Bool" Values='0:"False", 1:"True"' -->
+      <th colspan="2">Conveyor Status</th>
+      <tr>
+        <td>Station A Clear</td>
+        <td>
+        <!-- AWP_Enum_Ref Name='"ShuttleInterface".ConveyorStatus.Station_A_Clear' Enum="Bool"-->:="ShuttleInterface".ConveyorStatus.Station_A_Clear:</td>
+      </tr>
+      <tr>
+        <td>Station A Clear - Delayed</td>
+        <td><!-- AWP_Enum_Ref Name='"ShuttleInterface".ConveyorStatus.Station_A_Clear_Delayed' Enum="Bool"-->:="ShuttleInterface".ConveyorStatus.Station_A_Clear_Delayed:</td>
+      </tr>
+      <tr>
+        <td>Station A Occupied</td>
+        <td><!-- AWP_Enum_Ref Name='"ShuttleInterface".ConveyorStatus.Station_A_Occupied' Enum="Bool"-->:="ShuttleInterface".ConveyorStatus.Station_A_Occupied:</td>
+      </tr>
+      <tr>
+        <td>Station A Occupied - Delayed</td>
+        <td><!-- AWP_Enum_Ref Name='"ShuttleInterface".ConveyorStatus.Station_A_Occupied_Delayed' Enum="Bool"-->:="ShuttleInterface".ConveyorStatus.Station_A_Occupied_Delayed:</td>
+      </tr>
+      <tr>
+        <td>Station B Clear</td>
+        <td><!-- AWP_Enum_Ref Name='"ShuttleInterface".ConveyorStatus.Station_B_Clear' Enum="Bool"-->:="ShuttleInterface".ConveyorStatus.Station_B_Clear:</td>
+      </tr>
+      <tr>
+        <td>Station B Clear - Delayed</td>
+        <td><!-- AWP_Enum_Ref Name='"ShuttleInterface".ConveyorStatus.Station_B_Clear_Delayed' Enum="Bool"-->:="ShuttleInterface".ConveyorStatus.Station_B_Clear_Delayed:</td>
+      </tr>
+      <tr>
+        <td>Station B Occupied</td>
+        <td><!-- AWP_Enum_Ref Name='"ShuttleInterface".ConveyorStatus.Station_B_Occupied' Enum="Bool"-->:="ShuttleInterface".ConveyorStatus.Station_B_Occupied:</td>
+      </tr>
+      <tr>
+        <td>Station B Occupied - Delayed</td>
+        <td><!-- AWP_Enum_Ref Name='"ShuttleInterface".ConveyorStatus.Station_B_Occupied_Delayed' Enum="Bool"-->:="ShuttleInterface".ConveyorStatus.Station_B_Occupied_Delayed:</td>
+      </tr>
+    </table>
 
-<h1 class="glow">leochras</h1>
-<p>since 04.04.2017</p>
+    <p>
 
-<hr class="center">
-
-<h2 class="glow">Diverse Links:</h2>
-	 
-	    <a href="https://twitter.com/leochras" target="_blank">Twitter<a/>
-<p></p> 
-		<a href="https://kit.co/leochras" target="_blank" >Mein Equipment</a>
-<p></p>  
-
-<h2 class="glow">Musik:</h2>
-          
-        <a href="https://soundcloud.com/leochras" target="_blank">Soundcloud<a/>
-<p></p>
-		<a href="https://open.spotify.com/artist/2qpsljlKwtCMGe7OsiT7qx" target="_blank">Spotify<a/>
-
-<h2 class="glow">Fotos und Videos:</h2>
-                
-		<a href="https://www.instagram.com/_leochras/" target="_blank">Instagram<a/>                    
-<p></p>                  
-		<a href="https://www.flickr.com/photos/155927484@N02" target="_blank">Flickr (Inaktiv)<a/>
-<p></p>
-        <a href="https://www.youtube.com/channel/UCL88WsgR7lFKwM_ySHHup3A" target="_blank">YouTube<a/>
-
-</hr>
- </div>
-
-
-</body>
+  	<table class=addinfo>
+  		<tr class="addinfo">
+    		<td class="addinfo">Driveroll Gear Ratio</td>
+        <td class="addinfo">9:1</td>
+        <td class="addinfo">12:1</td>
+        <td class="addinfo">16:1</td>
+        <td class="addinfo">20:1</td>
+        <td class="addinfo">24:1</td>
+        <td class="addinfo">36:1</td>
+        <td class="addinfo">48:1</td>
+        <td class="addinfo">64:1</td>
+        <td class="addinfo">96:1</td>
+      </tr>
+  		<tr class="addinfo">
+    		<td class="addinfo">Maximum Speed (100%)</td>
+        <td class="addinfo">1,75</td>
+        <td class="addinfo">1,31</td>
+        <td class="addinfo">0,98</td>
+        <td class="addinfo">0,79</td>
+        <td class="addinfo">0,65</td>
+        <td class="addinfo">0,44</td>
+        <td class="addinfo">0,33</td>
+        <td class="addinfo">0,25</td>
+        <td class="addinfo">0,16</td>
+        <td class="addinfo">m/s</td>
+      </tr>
+  	</table>
+  </body>
 </html>
