--- a/interface.html
+++ b/interface.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <header>
-      <link rel="stylesheet" type="text/css" href="style.css">
+      <link rel="stylesheet" type="text/css" href="interface.css">
       <title>Webinterface</title>
   </header>
 
