--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
 <h2 class="glow">Fotos und Videos:</h2>
                 
-		<a href="https://www.instagram.com/_leochras/" target="_blank">Instagram<a/>                    
+		<a href="https://www.instagram.com/leochras_/" target="_blank">Instagram<a/>                    
 <p></p>                  
 		<a href="https://www.flickr.com/photos/155927484@N02" target="_blank">Flickr (Inaktiv)<a/>
 <p></p>
