--- a/index.html
+++ b/index.html
@@ -18,20 +18,20 @@
 
 <hr class="center">
 
-<h2 class="glow">Diverse Links:</h2>
+<h2 class="glow">Diverse Links</h2>
 	 
 	    <a href="https://twitter.com/leochras" target="_blank">Twitter<a/>
 <p></p> 
 		<a href="https://kit.co/leochras" target="_blank" >Mein Equipment</a>
 <p></p>  
 
-<h2 class="glow">Musik:</h2>
+<h2 class="glow">Musik</h2>
           
         <a href="https://soundcloud.com/leochras" target="_blank">Soundcloud<a/>
 <p></p>
 		<a href="https://open.spotify.com/artist/2qpsljlKwtCMGe7OsiT7qx" target="_blank">Spotify<a/>
 
-<h2 class="glow">Fotos und Videos:</h2>
+<h2 class="glow">Fotos und Videos</h2>
                 
 		<a href="https://www.instagram.com/leochras_/" target="_blank">Instagram<a/>                    
 <p></p>                  
@@ -41,7 +41,6 @@
 
 </hr>
  </div>
-
 
 </body>
 </html>
