--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
         <a href="https://soundcloud.com/leochras" target="_blank">Soundcloud<a/>
 <p></p>
 		<a href="https://open.spotify.com/artist/2qpsljlKwtCMGe7OsiT7qx" target="_blank">Spotify<a/>
+<p></p> 
+		<a href="https://audius.co/leochras" target="_blank">Audius</a>
 
 <h2 class="glow">Fotos und Videos</h2>
                 
