--- a/r6srechner.html
+++ b/r6srechner.html
@@ -88,7 +88,7 @@
         <th class="underline">Angreifer</th>
         <tr><td>
             <input type="checkbox" id="sledge" name="sledge">
-            <label for="sledge">Mute</label>
+            <label for="sledge">Sledge</label>
             <input type="checkbox" id="thatcher" name="thatcher">
             <label for="thatcher">Thatcher</label>
             <input type="checkbox" id="ash" name="ash">
