--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
 <p></p> 
 		<a href="https://kit.co/leochras" target="_blank" >Mein Equipment</a>
 <p></p>  
+		<a href="https://leochras.github.io/r6srechner" target="_blank" >R6S-Rechner</a>
+<p></p>  
 
 <h2 class="glow">Musik</h2>
           
