leosgehalt + div. änderungen Startseite

--- a/index.html
+++ b/index.html
@@ -10,6 +10,14 @@
 </head>
 <body>
 
+<div id="navbar">
+	<ul>
+		<button>R6S-Rechner</button>
+		<a href="https://leochras.com/r6srechner.html">R6S-Rechner</a>
+		<a href="leochras.com/r6srechner.html">R6S-Rechner</a>
+	</ul>
+</div>
+
 <div class="center">
 
 <h1 class="glow">leochras</h1>
