--- a/downloadtime.html
+++ b/downloadtime.html
@@ -2,7 +2,7 @@
 
 <head>
     <title>How long until my Download is finished?</title>
-    <script src="wielangenoch.js"></script>
+    <script src="downloadtime.js"></script>
     <link rel="stylesheet" href="style.css">
 </head>
 
