--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 
 <div id="navbar">
 	<ul>
-		<button>R6S-Rechner</button>
-		<a href="https://leochras.com/r6srechner.html">R6S-Rechner</a>
-		<a href="leochras.com/r6srechner.html">R6S-Rechner</a>
+		<a href="https://leochras.com/r6srechner">R6S-Rechner</a>
+		<a href="leochras.com/downloadtime">DownloadTime</a>
+		<a href="leochras.com/bummerlzaehler">Bummerlzaehler</a>
 	</ul>
 </div>
 
