svelte projekt + links navbar

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 <div id="navbar">
 	<ul>
 		<a href="https://leochras.com/r6srechner">R6S-Rechner</a>
-		<a href="leochras.com/downloadtime">DownloadTime</a>
-		<a href="leochras.com/bummerlzaehler">Bummerlzaehler</a>
+		<a href="https://leochras.com/downloadtime">DownloadTime</a>
+		<a href="https://leochras.com/bummerlzaehler">Bummerlzaehler</a>
 	</ul>
 </div>
 
