--- a/leosgehalt.html
+++ b/leosgehalt.html
@@ -5,10 +5,10 @@
 	<meta name='viewport' content='width=device-width,initial-scale=1'>
 
 	<title>Leos Gehalt</title>
-	<link rel='stylesheet' href='/build/global.css'>
-	<link rel='stylesheet' href='/build/bundle.css'>
+	<link rel='stylesheet' href='leosGehalt/public/global.css'>
+	<link rel='stylesheet' href='leosGehalt/public/build/bundle.css'>
 
-	<script defer src='/build/bundle.js'></script>
+	<script defer src='/leosGehalt/public/build/bundle.js'></script>
 </head>
 
 <body>
