--- a/index.html
+++ b/index.html
@@ -5,34 +5,30 @@
 <link rel="stylesheet" type="text/css" href="style.css">
 <title>leochras</title>
 <link rel="shortcut icon" href="gradient-small.png" >
-<meta name="viewport" content="width=device-width, initial-scale=0.8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 </head>
 <body>
-
-<div id="navbar">
-	<ul>
-		<a href="https://leochras.com/r6srechner">R6S-Rechner</a>
-		<a href="https://leochras.com/downloadtime">DownloadTime</a>
-		<a href="https://leochras.com/bummerlzaehler">Bummerlzaehler</a>
-	</ul>
-</div>
 
 <div class="center">
 
 <h1 class="glow">leochras</h1>
 <p>since 04.04.2017</p>
 
-<hr class="center">
-
 <h2 class="glow">Diverse Links</h2>
 	 
 	    <a href="https://twitter.com/leochras" target="_blank">Twitter<a/>
-<p></p> 
+<p></p>
 		<a href="https://kit.co/leochras" target="_blank" >Mein Equipment</a>
-<p></p>  
-		<a href="https://leochras.github.io/r6srechner" target="_blank" >R6S-Rechner</a>
-<p></p>  
+<p></p>
+
+<h3>Tools</h3>
+
+<div class="tools">
+	<div><a href="https://leochras.com/r6srechner">R6S-Rechner</a></div>
+	<div><a href="https://leochras.com/downloadtime">DownloadTime</a></div>
+	<div><a href="https://leochras.com/bummerlzaehler">Bummerlzaehler</a></div>
+</div>
 
 <h2 class="glow">Musik</h2>
           
