--- a/r6srechner.html
+++ b/r6srechner.html
@@ -158,7 +158,7 @@
         </tr></td>
     </tr>
 </table>
-<button id="berechnen" type="submit" value="Berechnen" onclick="rechner()">Berechnen</button>        
+<button class="center" id="berechnen" type="submit" value="Berechnen" onclick="rechner()">Berechnen</button>        
 
     <table>
         <tr>
