--- a/index.html
+++ b/index.html
@@ -41,9 +41,7 @@
 
 <h2 class="glow">Fotos und Videos</h2>
                 
-		<a href="https://www.instagram.com/leochras_/" target="_blank">Instagram<a/>                    
-<p></p>                   
-		<a href="https://www.flickr.com/photos/155927484@N02" target="_blank">Flickr (Inaktiv)<a/>
+	<a href="https://www.instagram.com/leochras/" target="_blank">Instagram<a/>                    
 <p></p>
         <a href="https://www.youtube.com/channel/UCL88WsgR7lFKwM_ySHHup3A" target="_blank">YouTube<a/>
 
