--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<title>leochras</title>
+	<script src="onTools.js"></script>
 	<link rel="shortcut icon" href="gradient-small.png">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -25,13 +26,7 @@
 			<a href="https://kit.co/leochras" target="_blank">Mein Equipment</a>
 			<p></p>
 
-		<h3>Tools</h3>
-
-		<div class="tools">
-			<div><a href="https://leochras.com/r6srechner">R6S-Rechner</a></div>
-			<div><a href="https://leochras.com/downloadtime">DownloadTime</a></div>
-			<div><a href="https://leochras.com/bummerlzaehler">Bummerlzaehler</a></div>
-		</div>
+		<a class="glow" href="tools.html">Tools (WIP)</a>
 
 		<h2 class="glow">Musik</h2>
 
