--- a/downloadtime.html
+++ b/downloadtime.html
@@ -8,6 +8,7 @@
 
 <body>
     <h2>How long until my download is finished?</h2>
+    <p>Keep in mind: 10 Mbps = 1,25 MB/s</p>
     <h3>Size of download in GB:</h3>
     <input style="width: auto;" type="number" name="downloadSize" id="dlSize">
     <h3>Already downloaded:</h3>
@@ -15,9 +16,9 @@
     <h3>Speed in Mbps:</h3>
     <input style="width: auto;" type="number" name="downloadSpeed" id="dlSpeed">
     <br></br>
-    <button onclick="wielangenoch(dlSize,dlSpeed)">How long?</button>
+    <button onclick="wielangenoch(dlSize,dlSpeed)">Calculate</button>
     <hr style="width: auto;">
-    <p id="remaining">Time remaining</p>
-    <p id="current">Time when finished</p>
+    <p id="remaining"></p>
+    <p id="current"></p>
 
 </body>
