changed back to 250 renown + other little changes

--- a/r6srechner.html
+++ b/r6srechner.html
@@ -72,13 +72,13 @@
     <h1 class="text-4xl leading-loose font-bold">R6S-Calculator V1.1.1</h1>
     <ul class="list-disc pl-10">
         <li class="text-xl">Choose the operators you don't own yet to calculate how long it will take you to unlock all operators.</li>
-        <li class="text-xl">The time is calculating by assuming one game takes about 15 minutes and you recieve 200 credits for each game.</li>    
+        <li class="text-xl">The time is calculating by assuming one game takes about 15 minutes and you recieve 250 renown for each game.</li>    
         <li class="text-xl">Last updated: 11.02.2022</li>
     </ul>
 
     <p class="text-xl pt-4 pb-4">I currently have 
     <input type="number" id="ansehen" class="border-2 m-2 p-2 text-xl bg-black" value="0">
-    credits (optional)</p>
+    renown (optional)</p>
 
     <div class=" ">
         <table class="border-4 bg-slate-800">
@@ -181,8 +181,8 @@
                         <label for="kaid"><img src="operators/kaid.svg">Kaid</label>
                     </td>
                     <td>
-                        <input type="checkbox" id="mozzy" name="mozzy">
-                        <label for="mozzy"><img src="operators/mozzie.svg">Mozzy</label>
+                        <input type="checkbox" id="mozzie" name="mozzie">
+                        <label for="mozzie"><img src="operators/mozzie.svg">Mozzie</label>
                     </td>
                     <td>
                         <input type="checkbox" id="warden" name="warden">
