--- a/tools.html
+++ b/tools.html
@@ -10,8 +10,8 @@
     <h2>Tools</h2>
     <div>
         <ul>
-            <li><a href="https://leochras.com/r6srechner">R6S-Rechner</a></li>
-            <li><a href="https://leochras.com/downloadtime">DownloadTime</a></li>
+            <li><a href="https://leochras.com/r6srechner">R6S Calculator</a></li>
+            <li><a href="https://leochras.com/downloadtime">Downloadtime calculator</a></li>
             <li><a href="https://leochras.com/bummerlzaehler">Bummerlzaehler</a></li>
         </ul>
     </div>
