--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body class="dark:bg-black pt-2">
 	<div class="text-center font-sans text-xl">
 		<nav class="hidden">
-			<a href="leochras.com">Home</a>
-			<a href="tools.html">Tools</a>
+			<a href="/.">Home</a>
+			<a href="/tools.html">Tools</a>
 		</nav>
 		<h1 class="text-pink-500 font-bold text-7xl leading-loose drop-shadow-lg">leochras</h1>
 		<p class="font-thin text-green-400 italic">[leokras]</p>
