--- a/tools.html
+++ b/tools.html
@@ -7,12 +7,15 @@
     <link rel="stylesheet" href="dist/output.css">
 </head>
 <body class="text-center dark:bg-black dark:text-white">
+    <nav class="text-4xl">
+        <a href="/index.html">Home</a>
+    </nav>
     <h2>Tools</h2>
     <div>
         <ul>
-            <li><a href="https://leochras.com/r6srechner">R6S Calculator</a></li>
-            <li><a href="https://leochras.com/downloadtime">Downloadtime calculator</a></li>
-            <li><a href="https://leochras.com/bummerlzaehler">Bummerlzaehler</a></li>
+            <li><a href="/r6scalculator.html">R6S Calculator</a></li>
+            <li><a href="/downloadtime.html">Downloadtime calculator</a></li>
+            <li><a href="/bummerlzaehler.html">Bummerlzaehler</a></li>
         </ul>
     </div>
 </body>
