--- a/tools.html
+++ b/tools.html
@@ -7,12 +7,12 @@
     <link rel="stylesheet" href="dist/output.css">
 </head>
 <body class="text-center dark:bg-black dark:text-white">
-    <nav class="text-4xl">
+    <nav class="text-2xl">
         <a href="/index.html">Home</a>
     </nav>
-    <h2>Tools</h2>
+    <h1>Tools</h1>
     <div>
-        <ul>
+        <ul class="text-xl">
             <li><a href="/r6scalculator.html">R6S Calculator</a></li>
             <li><a href="/downloadtime.html">Downloadtime calculator</a></li>
             <li><a href="/bummerlzaehler.html">Bummerlzaehler</a></li>
