--- a/index.html
+++ b/index.html
@@ -15,16 +15,16 @@
 		<h1 class="text-pink-500 font-bold text-7xl leading-loose drop-shadow-lg">leochras</h1>
 		<p class="font-thin text-green-400 italic">[leokras]</p>
 		<p class="font-thin leading-loose text-green-400 italic">since 04.04.2017</p>
-		<h2 class="">Diverse Links</h2>
+		<h2 class="">URLs to click on</h2>
 
 			<a href="https://twitter.com/leochras" target="_blank">Twitter</a>
 			<p></p>
-			<a href="https://kit.co/leochras" target="_blank">Mein Equipment</a>
+			<a href="https://kit.co/leochras" target="_blank">My Equipment</a>
 			<p></p>
 
 		<a class="glow" href="tools.html">Tools (WIP)</a>
 
-		<h2 class="">Musik</h2>
+		<h2 class="">Music</h2>
 
 		<a href="https://soundcloud.com/leochras" target="_blank">Soundcloud</a>
 			<p></p>
@@ -32,7 +32,7 @@
 			<p></p>
 			<a href="https://audius.co/leochras" target="_blank">Audius</a>
 
-		<h2 class="">Fotos und Videos</h2>
+		<h2 class="">Photo and Video</h2>
 
 			<a href="https://www.instagram.com/leochras/" target="_blank">Instagram<a />
 			<p></p>
