ui fixes (navbars, fix link to r6ops)

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 			<a href="/.">Home</a>
 			<a href="/tools.html">Tools</a>
 		</nav>
-		<h1 class="text-pink-500 font-bold text-7xl leading-loose drop-shadow-lg">leochras</h1>
+		<h1>leochras</h1>
 		<p class="font-thin text-green-400 italic">[leokras]</p>
 		<p class="font-thin leading-loose text-green-400 italic">since 04.04.2017</p>
 		<h2 class="">URLs to click on</h2>
