--- a/tools.html
+++ b/tools.html
@@ -7,16 +7,14 @@
     <link rel="stylesheet" href="dist/output.css">
 </head>
 <body class="text-center dark:bg-black dark:text-white">
-    <nav class="text-2xl">
-        <a href="/index.html">Home</a>
-    </nav>
     <h1>Tools</h1>
-    <div>
-        <ul class="text-xl">
-            <li><a href="/r6scalculator.html">R6S Calculator</a></li>
-            <li><a href="/downloadtime.html">Downloadtime calculator</a></li>
-            <li><a href="/bummerlzaehler.html">Bummerlzaehler</a></li>
-        </ul>
-    </div>
+    <nav class="text-2xl">
+        <button onclick="location.href = 'index.html';">Home</button>
+        <nav>
+            <li style="color: rgb(74 222 128 / var(--tw-text-opacity));"><a href="/r6scalculator.html">R6S Calculator</a></li>
+            <li style="color: rgb(74 222 128 / var(--tw-text-opacity));"><a href="/downloadtime.html">Downloadtime calculator</a></li>
+            <li style="color: rgb(74 222 128 / var(--tw-text-opacity));"><a href="/bummerlzaehler.html">Bummerlzaehler</a></li>
+        </nav>
+    </nav>
 </body>
 </html>
