restructuring/fix links

--- a/r6scalculator/index.html
+++ b/r6scalculator/index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html>
 <header>
-    <link rel="stylesheet" type="text/css" href="./dist/output.css">
+    <link rel="stylesheet" type="text/css" href="../dist/output.css">
     <title>R6S-Calculator</title>
 </header>
 
 <body onload="getAndSetProperties()" class="dark:bg-black text-green-400 pl-8 pt-4 pr-8">
-    <script src="js/r6scalculator.js"></script>
+    <script src="r6scalculator.js"></script>
     <nav style="font-size: 1.25rem; padding: 1rem; border: 0.01rem; border-color: rgb(74 222 128 / var(--tw-text-opacity)); border-style: dashed; ">
         <table>
             <tr style="cursor: pointer">
-                <td onclick="location.href = 'index.html'" >Home</td>
-                <td onclick="location.href = 'tools.html'" >Tools</td>
+                <td onclick="location.href = '../'" >Home</td>
+                <td onclick="location.href = '../tools'" >Tools</td>
             </tr>
         </table>
 
