--- a/tools.html
+++ b/tools.html
@@ -11,9 +11,9 @@
     <nav class="text-2xl">
         <button onclick="location.href = 'index.html';">Home</button>
         <nav>
-            <li style="color: rgb(74 222 128 / var(--tw-text-opacity));"><a href="/r6scalculator.html">R6S Calculator</a></li>
-            <li style="color: rgb(74 222 128 / var(--tw-text-opacity));"><a href="/downloadtime.html">Downloadtime calculator</a></li>
-            <li style="color: rgb(74 222 128 / var(--tw-text-opacity));"><a href="/bummerlzaehler.html">Bummerlzaehler</a></li>
+            <li style="color: rgb(74 222 128 / var(--tw-text-opacity));"><a href="/r6scalculator">R6S Calculator</a></li>
+            <li style="color: rgb(74 222 128 / var(--tw-text-opacity));"><a href="/downloadtime">Downloadtime calculator</a></li>
+            <li style="color: rgb(74 222 128 / var(--tw-text-opacity));"><a href="/bummerlzaehler">Bummerlzaehler</a></li>
         </nav>
     </nav>
 </body>
