--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
 		<p class="font-thin leading-loose text-green-400 italic">since 04.04.2017</p>
 		<h2 class="">URLs to click on</h2>
 
-			<a href="https://twitter.com/leochras" target="_blank">Twitter</a>
+			<a href="https://twitter.com/leochras" target="_blank"><s>Twitter</s></a>
 			<p></p>
 			<a href="https://kit.co/leochras" target="_blank">My Equipment</a>
 			<p></p>
 
-		<a class="glow" href="tools.html">Tools (WIP)</a>
+		<a class="glow" href="tools.html">Tools/Projects (WIP)</a>
 
 		<h2 class="">Music</h2>
 
