fix links in downloadtime

--- a/downloadtime/index.html
+++ b/downloadtime/index.html
@@ -2,8 +2,8 @@
 
 <head>
     <title>How long until my Download is finished?</title>
-    <script src="./downloadtime/downloadtime.js"></script>
-	<link rel="stylesheet" href="./dist/output.css">
+    <script src="downloadtime.js"></script>
+	<link rel="stylesheet" href="../dist/output.css">
 </head>
 
 <body class="dark:bg-black text-green-400 m-4 text-center">
