--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
 	<title>leochras</title>
 	<link rel="shortcut icon" href="gradient-small.png">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<script async defer data-website-id="c85e5a01-4fb2-4df6-8d4c-3a8501aada1d" src="http://traucons.synology.me:3003/umami.js"></script>
 </head>
 <body class="dark:bg-black pt-2">
 	<div class="text-center font-sans text-xl">
@@ -20,6 +19,9 @@
 
 			<a href="https://twitter.com/leochras" target="_blank"><s>Twitter</s></a>
 			<p></p>
+			<a href="https://github.com/leochras" target="_blank"><s>Github</s></a>
+			<p></p>
+
 			<a href="https://kit.co/leochras" target="_blank">My Equipment</a>
 			<p></p>
 
