--- a/index.html
+++ b/index.html
@@ -17,15 +17,13 @@
 		<p class="font-thin leading-loose text-green-400 italic">since 04.04.2017</p>
 		<h2 class="">URLs to click on</h2>
 
-			<a href="https://twitter.com/leochras" target="_blank"><s>Twitter</s></a>
-			<p></p>
-			<a href="https://github.com/leochras" target="_blank"><s>Github</s></a>
+			<a href="https://github.com/leochras" target="_blank">Github</a>
 			<p></p>
 
 			<a href="https://kit.co/leochras" target="_blank">My Equipment</a>
 			<p></p>
 
-		<a class="glow" href="/projects">Projects</a>
+			<a class="glow" href="/projects">Projects</a>
 
 		<h2 class="">Music</h2>
 
