fix links to splide

--- a/traucons/index.html
+++ b/traucons/index.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 <head>
     <link rel="stylesheet" href="../traucons/style.css">
-    <link rel="stylesheet" href="../node_modules/@splidejs/splide/dist/css/splide.min.css">
-    <script src="../node_modules/@splidejs/splide/dist/js/splide.js"></script>
-    <script src="/node_modules/@splidejs/splide-extension-auto-scroll/dist/js/splide-extension-auto-scroll.js"></script>
+    <link rel="stylesheet" href="./splide/splide.min.css">
+    <script src="./splide/splide.js"></script>
     <title>TRAUCONS - Homepage</title>
     <link rel="shortcut icon" href="../traucons/media/favicon.ico" type="image/x-icon">
 </head>
@@ -29,6 +28,10 @@
         </div>
       </section>
       
+
+      <h1>Mehr über TRAUCONS</h1>
+      <a href="https://www.campus02.at/news/ein-atlas-fuer-die-technik/">Ein Atlas für die Technik</a>
+
     <footer class="fusszeile">
         <hr color="FF6300" width="1000" style="max-width: 100%;">
         <button onclick="location.href='../traucons/impressum.html'" class="impressumButton" >Impressum</button>
