update switcher svgs

--- a/traucons/index.html
+++ b/traucons/index.html
@@ -22,8 +22,9 @@
     <section class="splide" data-splide='{"type":"fade", "autoheight":"true", "pagination":false, "arrows":false, "autoplay": "true", "rewind":"true", "speed":250, "interval":1000}' aria-label="Splide Basic HTML Example" style="padding-bottom: 4rem;">
         <div class="splide__track">
               <ul class="splide__list">
-                  <li class="splide__slide"><img src="../traucons/media/Switcher/consequent.png" alt=""></li>
-                  <li class="splide__slide"><img src="../traucons/media/Switcher/consensual.png" alt=""></li>
+                  <li class="splide__slide"><img src="../traucons/media/Switcher/consequent.svg" width="500" alt=""></li>
+                  <li class="splide__slide"><img src="../traucons/media/Switcher/consensual.svg" width="500" alt=""></li>
+                  <li class="splide__slide"><img src="../traucons/media/Switcher/constructive.svg" width="500" alt=""></li>
               </ul>
         </div>
       </section>
