--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<title>leochras</title>
 	<link rel="shortcut icon" href="gradient-small.png">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<script async defer data-website-id="1de310d1-eb84-409a-937d-5f17b372e002" src="https://umami.traucons.synology.me/umami.js"></script>
 </head>
 <body class="dark:bg-black pt-2">
 	<div class="text-center font-sans text-xl">
