--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<link rel="stylesheet" href="dist/output.css">
-	<title>leochras</title>
+	<title>krass</title>
 	<link rel="shortcut icon" href="gradient-small.png">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
