--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 			<a href="/.">Home</a>
 			<a href="/projects">Projects</a>
 		</nav>
-		<h1>leochras</h1>
+		<h1>krass.</h1>
 		<p class="font-thin text-green-400 italic">[leokras]</p>
 		<p class="font-thin leading-loose text-green-400 italic">since 04.04.2017</p>
 		<h2 class="">URLs to click on</h2>
