--- a/index.html
+++ b/index.html
@@ -13,27 +13,13 @@
 			<a href="/projects">Projects</a>
 		</nav>
 		<h1>krass.</h1>
-		<p class="font-thin text-green-400 italic">[leokras]</p>
 		<p class="font-thin leading-loose text-green-400 italic">since 04.04.2017</p>
 		<h2 class="">URLs to click on</h2>
 
-			<a href="https://github.com/leochras" target="_blank">Github</a>
+			<a href="https://github.com/derkrasseleo" target="_blank">Github</a>
 			<p></p>
 
 			<a class="glow" href="/projects">Projects</a>
-
-		<h2 class="">Music</h2>
-
-		<a href="https://soundcloud.com/leochras" target="_blank">Soundcloud</a>
-			<p></p>
-			<a href="https://open.spotify.com/artist/2qpsljlKwtCMGe7OsiT7qx" target="_blank">Spotify</a>
-			<p></p>
-			<a href="https://audius.co/leochras" target="_blank">Audius</a>
-
-		<h2 class="">Photo and Video</h2>
-			<a href="https://www.instagram.com/leochras/" target="_blank">Instagram</a>
-			<p></p>
-			<a href="https://www.youtube.com/channel/UCL88WsgR7lFKwM_ySHHup3A" target="_blank">YouTube</a>
 	</div>
 </body>
 
